--- a/expe.tex
+++ b/expe.tex
@@ -51,7 +51,7 @@ Table \ref{table:artificial_networks} summarizes these four configurations. We r
 
 \textit{Real networks}
 
-We evaluate also the models on two  real networks.
+We also used two real world networks for our experiments .
 The first one \footnote{available at:} is built from an online community of 1899 students from the University of California. Each node corresponds to a user and a    directed edge represents a sent message.
 The second one \footnote{available at:} is an internal email communication network between employees of a mid-sized manufacturing company. Each vertex is associated  to an employee and an oriented link represents like previously a sent email.
 
