--- a/expe_dev.tex
+++ b/expe_dev.tex
@@ -219,18 +219,20 @@ In figure \ref{fig:me_fit_lburst_mmsb} and \ref{fig:me_fit_lburst_ibp}, we repor
     \hline                                                                
     \end{tabular}    
 
-    \begin{tabular}{lllll}                                                                                    
-    \hline                                                                
-        \textbf{ILFM} & pvalue         & alpha           & x\_min          & n\_tail             \\            
-    \hline                                                                                                    
-    Network 1     & 1.0 $\pm$ 0.0    & 7.433 $\pm$ 2.181 & 1.0 $\pm$ 0.0    & 53.737 $\pm$ 9.8   \\
-    Network 2     & 1.0 $\pm$ 0.0    & None $\pm$ 0.0    & 1.0 $\pm$ 0.0    & 41.895 $\pm$ 11.2  \\                             
-    Network 3     & 1.0 $\pm$ 0.0    & 4.074 $\pm$ 0.706 & 1.0 $\pm$ 0.0    & 112.143 $\pm$ 18.5 \\                
-    Network 4     & 1.0 $\pm$ 0.0    & 1.957 $\pm$ 0.226 & 1.0 $\pm$ 0.0    & 316.095 $\pm$ 69.5 \\
-    Manufacturing & 0.55 $\pm$ 0.497 & 1.242 $\pm$ 1.156 & 0.55 $\pm$ 0.497 & 31.4 $\pm$ 14.6    \\              
-    UC Irvine     & 1.0 $\pm$ 0.0    & 5.213 $\pm$ 0.902 & 1.0 $\pm$ 0.0    & 242.0 $\pm$ 26.1   \\                
-    \hline                                                                
-    \end{tabular}    
+    \begin{tabular}{lllll}
+    \hline
+    & pvalue          & alpha            & x\_min                & n\_tail               \\
+    \hline
+    Network 1     & 0.0 $\pm$ 0.0     & 11.614 $\pm$ 5.948 & 767.381 $\pm$ 124.436  & 429.524 $\pm$ 109.859  \\
+    Network 2     & 0.025 $\pm$ 0.114 & 8.327 $\pm$ 4.901  & 571.952 $\pm$ 238.783  & 574.952 $\pm$ 214.914  \\
+    Network 3     & 0.0 $\pm$ 0.0     & 9.173 $\pm$ 5.428  & 629.286 $\pm$ 263.682  & 576.333 $\pm$ 223.119  \\
+    Network 4     & 0.0 $\pm$ 0.0     & 5.376 $\pm$ 1.194  & 670.381 $\pm$ 160.154  & 861.19 $\pm$ 70.024    \\
+    Manufacturing & 0.0 $\pm$ 0.0     & 2.695 $\pm$ 0.886  & 69.048 $\pm$ 15.546    & 134.952 $\pm$ 7.121    \\
+    UC Irvine     & 0.0 $\pm$ 0.0     & 7.96 $\pm$ 4.9     & 1025.857 $\pm$ 456.545 & 1210.667 $\pm$ 381.992 \\
+    \hline
+    \end{tabular}
+
+
 \end{table}
 
 \subsection{Homophily}
