--- a/expe_dev.tex
+++ b/expe_dev.tex
@@ -49,7 +49,13 @@
 The artificial networks have been generated with ANC-Generator \cite{largeron2015}. This generator has been chosen because it allows to build attributed graphs with  community structure faithfully following the known properties of real-world networks such as preferential attachment and homophily.
 Moreover, by modifying the parameters, these properties can be weakened. Finally, ANC-Generator is available under the terms of the GNU Public License and the        parameters can be shared for experiments reproducibility.
 
-Four artificial networks have been generated. Each of them characterized by a different affinities to preferential attachment and homphily. Their adjacency matrices and global degree distribution has been reported in figure \ref{fig:synt_graph}. In table \ref{table:synt_graph} we report the results of a power law goodness of fit for degree distribution of the networks. Figure \ref{fig:synt_graph_local} represent the local degree distribution associated to each \emph{ground truth} cluster for each networks. Table \ref{xx} report the power law goodness of fit results in the local case.
+Four artificial networks have been generated. Each of them characterized by a different affinities to preferential attachment and homphily. Their adjacency matrices and global degree distribution has been reported in figure \ref{fig:synt_graph}. In table \ref{table:synt_graph} we report the results of a power law goodness of fit for degree distribution of the networks. Figure \ref{fig:synt_graph_local} represent the local degree distribution associated to each \emph{ground truth} cluster for each networks. Table \ref{table:synt_graph_local} report the power law goodness of fit results in the local case. We separated the degree for inner degree (edgesinside a class) and outer degree (edges between classes).
+
+\paragraph{Note of the goodness of fit results for synthetic networks:}
+\begin{itemize}
+    \item Network 1 to 4 as a decreasing pvalue in their overall degree distribution. Network 1 and have relatively high pvalue that suggest high confidence in a power law fit. In the opposite, Network 4 reject the power law hypothsis strongly with a null pvalue.
+    \item The analysis on local degree distribution show that network has high pvalue with a small standard deviation, while network 3 and 4 have lower pvalue and higer standard deviation  which suggest that they satisfy poorly the local preferential attachment.
+\end{itemize}
 
 
 \input{t/a.tex}
@@ -57,18 +63,34 @@ Four artificial networks have been generated. Each of them characterized by a di
 
 \begin{table}[h]
 \label{table:synt_graph}
-\caption{Power law goodness of fit results for characterization of global degree attachment in synthetic networks.}
+\caption{Power law goodness of fit results for characterization of global preferential attachment in synthetic networks.}
 \centering
-\begin{tabular}{lrrrr}
-\hline
-           &   pvalue &   alpha &   x\_min &   n\_tail \\
-\hline
- Network 4 &    0.000 &   1.354 &       3 & 1000.000 \\
- Network 3 &    0.798 &   1.758 &       3 & 1000.000 \\
- Network 2 &    0.971 &   2.897 &       3 & 1000.000 \\
- Network 1 &    1.000 &   2.424 &       3 & 1000.000 \\
-\hline
-\end{tabular}
+    \begin{tabular}{lrrrr}
+    \hline
+               &   pvalue &   alpha &   x\_min &   n\_tail \\
+    \hline
+     Network 4 &    0.000 &   1.354 &       3 & 1000.000 \\
+     Network 3 &    0.798 &   1.758 &       3 & 1000.000 \\
+     Network 2 &    0.971 &   2.897 &       3 & 1000.000 \\
+     Network 1 &    1.000 &   2.424 &       3 & 1000.000 \\
+    \hline
+    \end{tabular}
+\end{table}
+
+\begin{table}[h]
+\label{table:synt_graph_local}
+\caption{Power law goodness of fit results for characterization of local preferential attachment in synthetic networks.}
+\centering
+    \begin{tabular}{lllll}
+    \hline
+    & pvalue          & alpha           & x\_min        & n\_tail           \\
+    \hline
+    Network 1 & 0.9 $\pm$ 0.07  & 2.7 $\pm$ 0.1 & 1.8 $\pm$ 0.9 & 154.4 $\pm$ 83.9 \\
+    Network 2 & 0.9 $\pm$ 0.008 & 3.0 $\pm$ 1.2  & 1.8 $\pm$ 0.9 & 170.9 $\pm$ 66.4  \\
+    Network 3 & 0.8 $\pm$ 0.26 & 7.0 $\pm$ 5.8 & 1.8 $\pm$ 0.9 & 136.3 $\pm$ 94.0 \\
+    Network 4 & 0.6 $\pm$ 0.49    & 1.5 $\pm$ 0.1 & 1.8 $\pm$ 0.9 & 204.7 $\pm$ 53.0 \\
+    \hline
+    \end{tabular}
 \end{table}
 
 
@@ -163,6 +185,7 @@ In figure \ref{fig:me_fit_gburst_mmsb} and \ref{fig:me_fit_gburst_mmsb}, we repo
 \begin{table}
     \label{table:global_gof}
     \caption{Power law Goodness of fit for the global preferential attachment effect.}
+\centering
     \begin{tabular}{lllll}
     \hline
         \textbf{IMMSB} & pvalue          & alpha           & x\_min          & n\_tail           \\
@@ -206,6 +229,7 @@ In figure \ref{fig:me_fit_lburst_mmsb} and \ref{fig:me_fit_lburst_ibp}, we repor
 \begin{table}
     \label{table:local_gof}
     \caption{Power law Goodness of fit for the local preferential attachment effect.}
+\centering
     \begin{tabular}{lllll}                                                                                    
     \hline                                                                
         \textbf{IMMSB}  & pvalue         & alpha           & x\_min          & n\_tail             \\            
@@ -221,16 +245,16 @@ In figure \ref{fig:me_fit_lburst_mmsb} and \ref{fig:me_fit_lburst_ibp}, we repor
 
     \begin{tabular}{lllll}
     \hline
-    & pvalue          & alpha            & x\_min                & n\_tail               \\
+        \textbf{ILFM} & pvalue          & alpha           & x\_min           & n\_tail              \\
     \hline
-    Network 1     & 0.0 $\pm$ 0.0     & 11.614 $\pm$ 5.948 & 767.381 $\pm$ 124.436  & 429.524 $\pm$ 109.859  \\
-    Network 2     & 0.025 $\pm$ 0.114 & 8.327 $\pm$ 4.901  & 571.952 $\pm$ 238.783  & 574.952 $\pm$ 214.914  \\
-    Network 3     & 0.0 $\pm$ 0.0     & 9.173 $\pm$ 5.428  & 629.286 $\pm$ 263.682  & 576.333 $\pm$ 223.119  \\
-    Network 4     & 0.0 $\pm$ 0.0     & 5.376 $\pm$ 1.194  & 670.381 $\pm$ 160.154  & 861.19 $\pm$ 70.024    \\
-    Manufacturing & 0.0 $\pm$ 0.0     & 2.695 $\pm$ 0.886  & 69.048 $\pm$ 15.546    & 134.952 $\pm$ 7.121    \\
-    UC Irvine     & 0.0 $\pm$ 0.0     & 7.96 $\pm$ 4.9     & 1025.857 $\pm$ 456.545 & 1210.667 $\pm$ 381.992 \\
-    \hline
-    \end{tabular}
+    Network 1     & 1.0 $\pm$ 0.0     & 1.93 $\pm$ 0.3  & 1.0 $\pm$ 0.0     & 325.7 $\pm$ 154.9 \\
+    Network 2     & 0.952 $\pm$ 0.2 & 1.76 $\pm$ 0.5 & 0.9 $\pm$ 0.2 & 423.8 $\pm$ 210.1  \\
+    Network 3     & 0.957 $\pm$ 0.2 & 1.58 $\pm$ 0.3 & 1.0 $\pm$ 0.0     & 587.0 $\pm$ 252.2 \\
+    Network 4     & 0.698 $\pm$ 0.4 & 1.33 $\pm$ 0.1 & 1.0 $\pm$ 0.0     & 632.9 $\pm$ 200.1  \\
+    Manufacturing & 0.69 $\pm$ 0.3   & 1.40 $\pm$ 0.2 & 1.0 $\pm$ 0.0     & 92.0 $\pm$ 26.5     \\
+    UC Irvine     & 1.0 $\pm$ 0.0     & 1.87 $\pm$ 0.4   & 1.0 $\pm$ 0.0     & 994.3 $\pm$ 408.8 \\
+\hline
+\end{tabular}
 
 
 \end{table}
@@ -243,6 +267,7 @@ Firstly, we can notice that the results are stable since the standard deviation 
 
 \begin{table}
     \caption{Correlation between the natural similarity matrix and adjacency matrix for IMMSB and ILFM.}
+\centering
     \begin{tabular}{lll}
     \hline
     & IMMSB   & ILFM  \\
