--- a/t/me_fit_gburst_ibp.tex
+++ b/t/me_fit_gburst_ibp.tex
@@ -40,4 +40,5 @@
         %\quad
         %\hfill
         \caption{ILFM global degree distribution in the $M_e$ settings. } 
+        \label{fig:me_fit_gburst_ibp}
 \end{figure}
