--- a/t/me_fit_lburst_mmsb.tex
+++ b/t/me_fit_lburst_mmsb.tex
@@ -40,4 +40,5 @@
         %\quad
         %\hfill
         \caption{IMMSB Local degree distribution in the $M_e$ settings. } 
+        \label{fig:me_fit_lburst_mmsb}
 \end{figure}
