--- a/t/table_results.tex
+++ b/t/table_results.tex
@@ -2,7 +2,7 @@
 
 % K = 5
 
-\begin{table*}[h] \label{table:unbalanced}
+\begin{table*}[h] 
 \caption{Predictive Performance for Synthetic datasets}
 	\begin{minipage}[h]{0.45\linewidth} 
       \resizebox{\textwidth}{!}{  
@@ -123,6 +123,7 @@ Network4     &   0.939 &      0.498 &   0.505 &    0.505 &  21.2 $\pm$ 1.0 \\
 \end{tabular}
     }
 \end{minipage}
+\label{table:unbalanced}
 \end{table*}
 
 
