--- a/expe_dev.tex
+++ b/expe_dev.tex
@@ -62,7 +62,6 @@ Four artificial networks have been generated. Each of them characterized by a di
 \input{t/b.tex}
 
 \begin{table}[h]
-\label{table:synt_graph}
 \caption{Power law goodness of fit results for characterization of global preferential attachment in synthetic networks.}
 \centering
     \begin{tabular}{lrrrr}
@@ -75,10 +74,10 @@ Four artificial networks have been generated. Each of them characterized by a di
      Network 1 &    1.000 &   2.424 &       3 & 1000.000 \\
     \hline
     \end{tabular}
+\label{table:synt_graph}
 \end{table}
 
 \begin{table}[h]
-\label{table:synt_graph_local}
 \caption{Power law goodness of fit results for characterization of local preferential attachment in synthetic networks.}
 \centering
     \begin{tabular}{lllll}
@@ -91,6 +90,7 @@ Four artificial networks have been generated. Each of them characterized by a di
     Network 4 & 0.6 $\pm$ 0.49    & 1.5 $\pm$ 0.1 & 1.8 $\pm$ 0.9 & 204.7 $\pm$ 53.0 \\
     \hline
     \end{tabular}
+\label{table:synt_graph_local}
 \end{table}
 
 
@@ -105,7 +105,6 @@ Their adjacency matrices and global degree distribution has been reported in fig
 \input{t/c.tex}
 
 \begin{table}
-\label{table:real_graph}
 \caption{Power law goodness of fit results for characterization of global degree attachment in real networks.}
 \centering
 \begin{tabular}{lrrrr}
@@ -115,6 +114,7 @@ Their adjacency matrices and global degree distribution has been reported in fig
  UC Irvine     &    0.989 &   1.787 &       3 & 1899.000 \\
 \hline
 \end{tabular}
+\label{table:real_graph}
 \end{table}
 
 
@@ -139,7 +139,7 @@ In order to highlight correlation between different properties of learning datas
 
 \hspace{1cm}\textit{"Are the burstinesses effects really decorrelated from other properties (clustering, sparstity), to conclude on the fact that a model perform better than a other because of this particular properties (ie the global or local burstiness) ? (\textbf{Correlation \emph{vs} Causality}) } (the same questions holds for the impact that each properties have on each other. ) 
 
-\begin{table}[h] \label{table:artificial_networks_hom}
+\begin{table}[h] 
 \centering
 	\caption{table:artificial networks clustering and homophily measures.}
 	\begin{tabular}{lcrrr}
@@ -152,6 +152,7 @@ In order to highlight correlation between different properties of learning datas
 		$Network4$  & 0.621 ;  0.18  &0.68  & 0.61 & 0.06 \\
 		\hline
 	\end{tabular}
+\label{table:artificial_networks_hom}
 \end{table}
 
 \section{$M_e$ -- Model fitted}
@@ -175,7 +176,7 @@ All our experimental platform is available online \footnote{https://github.com/d
 In order to measure the different level of burstiness we used the models to generate full networks. (The procedure for such measure is similar than those explain in the section \ref{sec:mgmg}. Thus given the model parameters $\mathcal{M}_e = \{F ,\Phi\}$, we generate a set of 20 networks. In the next, results are averaged  with standard deviation for all those generated networks.
 
 % Global
-In figure \ref{fig:me_fit_gburst_mmsb} and \ref{fig:me_fit_gburst_mmsb}, we report the global degree for generated networks for respectively IMMSB and ILFM. In Table \ref{table_global_gof}, we report the corresponding goodness of fit evaluation.
+In figure \ref{fig:me_fit_gburst_mmsb} and \ref{fig:me_fit_gburst_ibp}, we report the global degree for generated networks for respectively IMMSB and ILFM. In Table \ref{table:global_gof}, we report the corresponding goodness of fit evaluation.
 
 \textcolor{red}{here comment...} 
 
@@ -183,7 +184,6 @@ In figure \ref{fig:me_fit_gburst_mmsb} and \ref{fig:me_fit_gburst_mmsb}, we repo
 \input{t/me_fit_gburst_ibp}
 
 \begin{table}
-    \label{table:global_gof}
     \caption{Power law Goodness of fit for the global preferential attachment effect.}
 \centering
     \begin{tabular}{lllll}
@@ -211,12 +211,13 @@ In figure \ref{fig:me_fit_gburst_mmsb} and \ref{fig:me_fit_gburst_mmsb}, we repo
     UC Irvine     & 1.0 $\pm$ 0.0     & 1.3 $\pm$ 0.002 & 1.0 $\pm$ 0.0 & 1798.3 $\pm$ 8.2 \\
     \hline
     \end{tabular}
+    \label{table:global_gof}
 \end{table}
 
 
 
 % Local
-In figure \ref{fig:me_fit_lburst_mmsb} and \ref{fig:me_fit_lburst_ibp}, we report the local degree for generated networks for respectively IMMSB and ILFM. In Table \ref{local_global_gof}, we report the corresponding goodness of fit evaluation. \underline{Note, that the pvalue reported here, are the averaged of all} classes.
+In figure \ref{fig:me_fit_lburst_mmsb} and \ref{fig:me_fit_lburst_ibp}, we report the local degree for generated networks for respectively IMMSB and ILFM. In Table \ref{table:local_gof}, we report the corresponding goodness of fit evaluation. \underline{Note that the pvalue reported here, are the averaged of all} classes.
 
 
 \textcolor{red}{here comment...} ~\\
@@ -227,7 +228,6 @@ In figure \ref{fig:me_fit_lburst_mmsb} and \ref{fig:me_fit_lburst_ibp}, we repor
 
 
 \begin{table}
-    \label{table:local_gof}
     \caption{Power law Goodness of fit for the local preferential attachment effect.}
 \centering
     \begin{tabular}{lllll}                                                                                    
@@ -253,20 +253,19 @@ In figure \ref{fig:me_fit_lburst_mmsb} and \ref{fig:me_fit_lburst_ibp}, we repor
     Network 4     & 0.698 $\pm$ 0.4 & 1.33 $\pm$ 0.1 & 1.0 $\pm$ 0.0     & 632.9 $\pm$ 200.1  \\
     Manufacturing & 0.69 $\pm$ 0.3   & 1.40 $\pm$ 0.2 & 1.0 $\pm$ 0.0     & 92.0 $\pm$ 26.5     \\
     UC Irvine     & 1.0 $\pm$ 0.0     & 1.87 $\pm$ 0.4   & 1.0 $\pm$ 0.0     & 994.3 $\pm$ 408.8 \\
-\hline
-\end{tabular}
-
-
+    \hline
+    \end{tabular}
+\label{table:local_gof}
 \end{table}
 
 \subsection{Homophily}
 
 We evaluate in this section the behaviour of homophily of models according to both, the natural and the latent similarity, reported respectively in tables \ref{table:homo_natural} and \ref{table:homo_latent}. Those results are obtained by computing the Pearson correlation coefficient between a random adjacency matrix and a similarity matrix matrix as defined in \ref{sec_homophily} from a model (either IMMSB or ILFM). Each of these coefficient is averaged an basis on 20 networks generated from the fitted models in the same setting than for previous section.
 
-Firstly, we can notice that the results are stable since the standard deviation is not significant for all experiments. Secondly those results illustrate the fact that both models are homophilic under the natural similarity with a positive correlation in all networks,  and not under the latent similarity with a correlation coefficient near to 0 and oscillating between positive and negative value (Note this last fact depend on the initialization and the seed of the models).
+Firstly, we can notice that the results are stable since the standard deviation is not significant for all experiments. Secondly those results illustrate the fact that both models are homophilic under the natural similarity with a positive correlation in all networks,  and not under the latent similarity with a correlation coefficient near to 0 and oscillating between positive and negative value (Note that this last fact depend on the initialization and the seed of the models).
 
 \begin{table}
-    \caption{Correlation between the natural similarity matrix and adjacency matrix for IMMSB and ILFM.}
+\caption{Correlation between the natural similarity matrix and adjacency matrix for IMMSB and ILFM.}
 \centering
     \begin{tabular}{lll}
     \hline
@@ -280,6 +279,7 @@ Firstly, we can notice that the results are stable since the standard deviation 
     UC Irvine     & 0.21 $\pm$ 0.002  & 0.129 $\pm$ 0.001      \\
     \hline
     \end{tabular}
+\label{table:homo_natural}
 \end{table}
 
 
@@ -297,6 +297,7 @@ Firstly, we can notice that the results are stable since the standard deviation 
     UC Irvine     & 0.148 $\pm$ 0.002  & -0.063 $\pm$ 0.0        \\
     \hline
     \end{tabular}
+\label{table:homo_latent}
 \end{table}
 
 
@@ -336,10 +337,13 @@ The simulation shows us the following facts about the properties of the models:
 For the case of the global preferential attachment we have no formal proof for the non-compliance of the models, due the non closed form of the evidence in both models, due to the admixture design \textcolor{red}{ref ((Multiple Hypergeometric Functions: Probabilistic Interpretations and Statistical Uses
 James M. Dickey )) ce papier est cite dans LDA pour justifier l'inference approxime, mais je n'arrive pas a trouver ca papier !!!}. However, as reported simulations (figure \ref{fig:gen_burst}), we see that the empirical distributions of the overall degrees are clearly non bursty.
 
-\input{t/me_generate_burst}
+%\input{t/me_generate_burst}
 
 
 \subsection{Homophily}
 
+
+\bibliographystyle{unsrt}
+\bibliography{./a}
 
 \end{document}
