--- a/expe_dev.tex
+++ b/expe_dev.tex
@@ -51,10 +51,11 @@ Moreover, by modifying the parameters, these properties can be weakened. Finally
 
 Four artificial networks have been generated. Each of them characterized by a different affinities to preferential attachment and homphily. Their adjacency matrices and global degree distribution has been reported in figure \ref{fig:synt_graph}. In table \ref{table:synt_graph} we report the results of a power law goodness of fit for degree distribution of the networks. Figure \ref{fig:synt_graph_local} represent the local degree distribution associated to each \emph{ground truth} cluster for each networks. Table \ref{table:synt_graph_local} report the power law goodness of fit results in the local case. We separated the degree for inner degree (edgesinside a class) and outer degree (edges between classes).
 
-\paragraph{Note of the goodness of fit results for synthetic networks:}
+\paragraph{Note on the goodness of fit results for synthetic networks:}
 \begin{itemize}
-    \item Network 1 to 4 as a decreasing pvalue in their overall degree distribution. Network 1 and have relatively high pvalue that suggest high confidence in a power law fit. In the opposite, Network 4 reject the power law hypothsis strongly with a null pvalue.
-    \item The analysis on local degree distribution show that network has high pvalue with a small standard deviation, while network 3 and 4 have lower pvalue and higer standard deviation  which suggest that they satisfy poorly the local preferential attachment.
+    \item Network 1 to 4 have a decreasing pvalue in their overall degree distribution. Network 1 and 2 have a relatively high pvalue that suggests a high confidence in a power law fit. In the opposite, Network 4 reject the power law hypothsis strongly with a null pvalue.
+    \item The analysis on local degree distribution show that network has high pvalue with a small standard deviation, while network 3 and 4 have lower pvalue and higher standard deviation which suggest that they satisfy poorly the local preferential attachment.
+    \item \textcolor{red}{Put this in comparaison with homophily end sparsity ?!}
 \end{itemize}
 
 
