--- a/t/me_fit_lburst_ibp.tex
+++ b/t/me_fit_lburst_ibp.tex
@@ -39,6 +39,6 @@
         \end{subfigure}
         %\quad
         %\hfill
-        \caption{IMMSB Local degree distribution in the $M_e$ settings. } 
+        \caption{ILFM Local degree distribution in the $M_e$ settings. } 
         \label{fig:me_fit_lburst_ibp}
 \end{figure}
