--- a/t/table_results.tex
+++ b/t/table_results.tex
@@ -9,7 +9,7 @@
 K = 5\hspace{5pt}
 \begin{tabular}{llllll}
 \hline
- IMMSB   &   global &   precision &   recall & $f_1$ &    K-\ensuremath{>} \\
+ IMMSB   &   global &   precision &   recall & $F_1$ &    K-\ensuremath{>} \\
 \hline
 Network1        &    0.990 &       0.029 &    0.032 & 0.030 & 5.3 $\pm$ 0.4 \\
 Network2       &    0.992 &       0.032 &    0.034 &  0.032 & 5.8 $\pm$ 1.1 \\
@@ -25,7 +25,7 @@ Network4       &    0.887 &       0.151 &    0.192 &  0.170 & 5.4 $\pm$ 0.4 \\
       \resizebox{\textwidth}{!}{  
 \begin{tabular}{llllll}
 \hline
-  ILFM & global &   precision &   recall &   $f_1$ &   K-\ensuremath{>} \\
+  ILFM & global &   precision &   recall &   $F_1$ &   K-\ensuremath{>} \\
 \hline
 Network1      &    0.990 &       0.051 &    0.053 &  0.053 &  13.4 $\pm$ 0.8    \\
 Network2     &    0.992 &       0.044 &    0.045 &   0.044 &  14.0 $\pm$ 2.0    \\
@@ -284,7 +284,7 @@ Network4     &   0.939 &      0.498 &   0.505 &    0.505 &  21.2 $\pm$ 1.0 \\
 K = 5\hspace{5pt}
 \begin{tabular}{llllll}
 \hline
- IMMSB   &   global &   precision &   recall & $f_1$ &    K-\ensuremath{>} \\
+ IMMSB   &   global &   precision &   recall & $F_1$ &    K-\ensuremath{>} \\
 \hline
  fb\_uc          &    0.989 &       0.057 &    0.061 &  0.053 &   6.0 $\pm$ 1.2 \\
  manufacturing  &    0.809 &       0.545 &    0.550 & 	0.576 &	5.0 $\pm$ 0.3 \\
@@ -297,7 +297,7 @@ K = 5\hspace{5pt}
       \resizebox{\textwidth}{!}{  
 \begin{tabular}{llllll}
 \hline
-  ILFM & global &   precision &   recall &   $f_1$ &   K-\ensuremath{>} \\
+  ILFM & global &   precision &   recall &   $F_1$ &   K-\ensuremath{>} \\
 \hline
  fb\_uc            &    0.990 &       0.084 &    0.087 & 	0.084 &	10.8 $\pm$ 1.4 \\
  manufacturing    &    0.831 &       0.589 &    0.588 & 	0.588 &	9.2 $\pm$ 0.9 \\
