--- a/t/a.tex
+++ b/t/a.tex
@@ -35,7 +35,7 @@
 	\includegraphics[scale=0.32]{img/g4_d}
 	\endminipage
 	
-	\caption{Left subfigures represent the adjacency matrices for each of the 4 synthetic networks that we used for the prediction evaluation along with theirs respective global degree distribution in the right subplots.}
+	\caption{Adjacency matrices (left) and global degree distributions (right) for the artificial networks Network 1, ..,Network 4.}
 	\label{fig:synt_graph}
 \end{figure}
 
