--- a/t/b.tex
+++ b/t/b.tex
@@ -28,6 +28,6 @@
             \caption{{\small Network 4}}    
             \label{fig:mean and std of net44}
         \end{subfigure}
-        \caption {Local degree distribution of synthetic networks. Inner(left) and outer(right) degree are separated.} 
+        \caption {Local degree distribution for the artificial networks. Inner(left) and outer(right) degree are separated.} 
 	\label{fig:synt_graph_local}
 \end{figure}
