--- a/t/table_homo_natural.tex
+++ b/t/table_homo_natural.tex
@@ -1,6 +1,6 @@
 
 \begin{table}[h]
-\caption{table}{Homophily Contingency for latent similarity for IMMSB.}
+\caption{table}{Homophily Contingency for natural similarity for IMMSB.}
 
 \begin{minipage}[h]{0.45\textwidth}
 
@@ -74,10 +74,11 @@ UC Irvine           & $E[s_{ij}]$          & $V[s_{ij}]$          \\
 }
 \end{minipage}
 
+\label{table:homo_natural_immsb}
 \end{table}
 
 \begin{table}
-\caption{table}{Homophily Contingency for latent similarity for ILFM.}
+\caption{table}{Homophily Contingency for natural similarity for ILFM.}
 
 \begin{minipage}[h]{0.45\linewidth}
 
@@ -162,5 +163,5 @@ UC Irvine           & $E[s_{ij}]$          & $V[s_{ij}]$          \\
 }
 \end{minipage}
 
-\label{table:homo_natural}
+\label{table:homo_natural_ibp}
 \end{table}
