--- a/expe_dev.tex
+++ b/expe_dev.tex
@@ -355,7 +355,7 @@ In table \ref{table:homo_natural} and \ref{table:homo_latent} we compute conting
     \centering
     \begin{tabular}{lll}
     \hline
-    & ILFM  & IMMSB \\
+    & IMMSB  & ILFM \\
     \hline
     Network 1     & 0.082 &  -0.126   \\
     Network 2     & 0.001     &  -0.116   \\
