--- a/a.bib
+++ b/a.bib
@@ -483,3 +483,10 @@ publisher={JSTOR}
     year={2009},
     publisher={National Acad Sciences}
 }
+@article{veitch2015class,
+    title={The class of random graphs arising from exchangeable random measures},
+    author={Veitch, Victor and Roy, Daniel M},
+    journal={arXiv preprint arXiv:1512.03099},
+    year={2015}
+}
+
