--- a/sparsity_dev.tex
+++ b/sparsity_dev.tex
@@ -49,7 +49,7 @@
 
 We show the relation that exists between two important properties that arise in a wide range of domains, namely the burstiness and the sparsity properties. Though, these two properties shows up in a considerable number of datasets, such as biology, text corpus, geophysics, and complex networks, we will focus, in this paper, on a formalization that concerns networks data.~\\
 
-The burstiness is known as the rich get richer property. I don't know a metaphor for the second but it is also clearly related to \textbf{the small world effect} in the following sens: 
+The burstiness is known as the rich get richer property. I don't know a metaphor for the second but it is also clearly related to \textbf{the small world effect} in the following sens:
 
 \begin{quote}
     \emph{It is surpising that, in a world that have many nodes, just a traversal of few nodes can connect anybody.}
@@ -64,49 +64,49 @@ As far as I now, the typical definition of the small world effect (SME) is :
     \emph{The overall (or expected) closeness (?) increase at a $\log(N)$ rate.}
 \end{quote}
 
-This definition encode the intuition behind the SME. But within this definition, a densely connected network will be higly likely to satisfy the definition. Whereas, the SME become interesting when it is non trivially true.~\\
+This definition encode the intuition behind the SME. But within this definition, a densely connected network will be highly likely to satisfy the definition. Whereas, the SME become interesting when it is non trivially true.~\\
 
-The objective of this paper is to study the case when the SME is non trivial, that is, when it is accompanied with the sparsity property. Furthermore we aim at answering the following questions : 
+The objective of this paper is to study the case when the SME is non trivial, that is, when it is accompanied with the sparsity property. Furthermore we aim at answering the following questions :
 \begin{itemize}
     \item burstiness $\Rightarrow$ sparsity ?
-    \item burstiness $\Rightarrow$ sparsity  $\wedge$ small world ? 
-    \item sparsity  $\wedge$ small world $\Rightarrow$ burstiness ? 
+    \item burstiness $\Rightarrow$ sparsity  $\wedge$ small world ?
+    \item sparsity  $\wedge$ small world $\Rightarrow$ burstiness ?
 \end{itemize}
 
 \section{Power law to sparsity}
 This is a preliminary result that show that power law (a particular case of burstiness) implies sparsity in the networks (under regularity condition).~\\
 
-We first define the sparsity, for networks, following \cite{orbanz2015bayesian} and \cite{veitch2015class} : 
+We first define the sparsity, for networks, following \cite{orbanz2015bayesian} and \cite{veitch2015class} :
 \begin{definition}[Sparsity]
-    Given a graph $G = (V,E)$ containing $n$ vertice, it is say to be sparse if the following holds:
+    Given a graph $G = (V,E)$ containing $|V|=n$ vertexes, it is say to be sparse if the following holds:
     \begin{equation}
-        \frac{|E|}{|V|^2} \rightarrow 0 \qquad \mathrm{as} \quad  n \rightarrow \infty  
+        \frac{|E|}{|V|^2} \rightarrow 0 \qquad \mathrm{as} \quad  n \rightarrow \infty
     \end{equation}
 \end{definition}
 
 
 We define the burstiness as follows :
 \begin{definition}[Burstiness]
-    A given distribution $f$ on $x \in \mathbb{N}$ integer is said to be bursty iff $\forall n \in \mathbb{N} $ :
+    A given distribution $f$ on $x \in \mathbb{N}$ is said to be bursty iff $\forall n \in \mathbb{N} $ :
     \begin{equation}
         P_f(x \geq n+1 \mid x \geq n) \quad  \mathrm{increase\ with} \quad n
     \end{equation}
 \end{definition}
 
-This definition of the sparsity is equivalent to the following properties on the distribution $f$ : 
+This definition of the burstiness is equivalent to the following properties on the distribution $f$ :
 \begin{itemize}
-    \item log-convexity of the survival function : $\Delta_n^2 P_f(x \geq n) > 0$
+    \item log-convexity of the survival function : $\Delta_n^2 \log P_f(x \geq n) > 0$
     \item increasing of increment of $f$ : $\Delta \frac{f(x+1)}{f(x)} > 0$
 \end{itemize}
 
-We now assume that $f(x) = C x^{- \alpha}$ with $C$ and $\alpha$ two positive parameters of the power law, and $x$ a random variable on integers It our case $x$ is homogeneous to a degree. Now, let's suppose a unoriented graph $G=(V,E)$. Let's define : 
+We now assume that $f(x) = C x^{- \alpha}$ with $C$ and $\alpha$ two positive parameters of the power law, and $x$ a random variable on integers. Note that here,  $x$ is homogeneous to a degree. Now, let's suppose a non oriented graph $G=(V,E)$. Let's define :
 \begin{equation}
     f_k =  \textnormal{\{\# the number of nodes  having a degree equal to $k$ in $G$ \}}.
 \end{equation}
 
 We can write the number of vertexes and the number of edges in the graph as follows :
 \begin{equation}
-    N = \sum_{k=1}^\infty f_k  \quad\qquad E = \frac{1}{2}\sum_{k=1}^\infty k f_k 
+    N = \sum_{k=1}^\infty f_k  \quad\qquad E = \frac{1}{2}\sum_{k=1}^\infty k f_k
 \end{equation}
 
 When $N >> \infty$ we assume that the empirical distribution of the degree converge towards it's true distribution, in our case a power law, such that :
@@ -116,7 +116,7 @@ When $N >> \infty$ we assume that the empirical distribution of the degree conve
 
 Replacing the terms, we have the following :
 \begin{equation} \label{eq:e_zeta}
-    E = \frac{CN}{2}\sum_{k=1}^\infty x^{\alpha-1} = \frac{CN}{2} \zeta(\alpha-1)
+    E = \frac{CN}{2}\sum_{k=1}^\infty\frac{1}{k^{\alpha-1}} = \frac{CN}{2} \zeta(\alpha-1)
 \end{equation}
 
 Where $\zeta$ is the Riemann Zeta function. It converges if $\alpha > 2$, and in this case we have $E = O(N)$, which show that the graph $G$ is sparse if $\alpha > 2$.
