--- a/expe_dev.tex
+++ b/expe_dev.tex
@@ -44,6 +44,9 @@
 
 To illustrate our theoretical results, we evaluate the predictive performance and the ability of the models to capture homophily and preferential attachment on artificial and real networks. In the sequel, we first describe the measures used to evaluate the properties of interest and the predictive performance, then the datasets used in our experiments. Then, we detail the evaluation protocol and we present the experimental results.
 
+\section{pymake software}
+All our experiments were realized with a frameworks that we developed, and open sourced, available at : https://github.com/dtrckd/pymake. This repository is in current active development in order ot populate Bayesian modelisation, and to do reproducible research. The framework currently contains Gibbs sampler for the MMSB and IBP, for parametric and nonparametric versions. The frameworks also aims helping the design of experiments, the use of available datasets online and working scientific library such as \emph{numpy} \footnote{http://www.numpy.org/}, \emph{scikit-learn} \footnote{http://scikit-learn.org/}, \emph{networkx} \footnote{https://networkx.github.io/} and others.
+
 \section{Evaluation Measures}
 This article focus on two properties of networks, namely the preferential attachment effect and the homophily. In this section, we present the measures used in our experiments in order to characterized these properties and to evaluate the predictive performance of the models.
 
